Updates to css and markup

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -69,12 +69,12 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 /****************************************
 * Util classes
 ****************************************/
-/* line 14, ../../scss/main.scss */
+/* line 16, ../../scss/main.scss */
 .left {
   float: left;
 }
 
-/* line 16, ../../scss/main.scss */
+/* line 18, ../../scss/main.scss */
 .right {
   float: right;
 }
@@ -82,7 +82,20 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 /****************************************
 * Framework
 ****************************************/
-/* line 21, ../../scss/main.scss */
+/* line 23, ../../scss/main.scss */
+html, body, .base-input,
+.base-button {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 16px;
+  font-weight: 300;
+}
+
+/* line 33, ../../scss/main.scss */
+html::selection, html::-moz-selection, body::selection, body::-moz-selection {
+  background: rgba(151, 0, 151, 0.5);
+}
+
+/* line 36, ../../scss/main.scss */
 a {
   -webkit-transition: color 150ms ease;
   -moz-transition: color 150ms ease;
@@ -91,34 +104,59 @@ a {
   text-decoration: none;
 }
 
-/* line 27, ../../scss/main.scss */
+/* line 44, ../../scss/main.scss */
+input:focus,
+select:focus,
+textarea:focus,
+button:focus {
+  outline: none;
+}
+
+/* line 47, ../../scss/main.scss */
+.base-input,
+.base-button {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  padding: 15px;
+  border: none;
+  font-size: 16px;
+}
+
+/* line 55, ../../scss/main.scss */
+.base-button {
+  cursor: pointer;
+  background: #fff;
+}
+
+/* line 60, ../../scss/main.scss */
 .row {
   overflow: hidden;
   *zoom: 1;
   width: 100%;
 }
 
-/* line 32, ../../scss/main.scss */
+/* line 65, ../../scss/main.scss */
 .purple-background {
   background: #970097;
   color: #fff;
 }
-/* line 36, ../../scss/main.scss */
+/* line 69, ../../scss/main.scss */
 .purple-background a {
   color: #fff;
 }
-/* line 37, ../../scss/main.scss */
+/* line 70, ../../scss/main.scss */
 .purple-background a:hover {
   color: #000;
 }
 
-/* line 40, ../../scss/main.scss */
+/* line 73, ../../scss/main.scss */
 .container {
   max-width: 960px;
   margin: 0 auto;
 }
 
-/* line 45, ../../scss/main.scss */
+/* line 78, ../../scss/main.scss */
 .logo {
   text-indent: -9999px;
   background-image: url("");
@@ -129,22 +167,22 @@ a {
 /****************************************
 * Index 
 ****************************************/
-/* line 56, ../../scss/main.scss */
+/* line 89, ../../scss/main.scss */
 .menu-header {
   line-height: 80px;
 }
 
-/* line 61, ../../scss/main.scss */
+/* line 94, ../../scss/main.scss */
 .menu li {
   display: inline-block;
   margin-right: 5px;
 }
 
-/* line 67, ../../scss/main.scss */
+/* line 100, ../../scss/main.scss */
 .hero {
   height: 800px;
 }
-/* line 70, ../../scss/main.scss */
+/* line 103, ../../scss/main.scss */
 .hero .container {
   height: 100%;
 }
@@ -152,7 +190,7 @@ a {
 /****************************************
 * Misc.
 ****************************************/
-/* line 77, ../../scss/main.scss */
+/* line 110, ../../scss/main.scss */
 #mfPreviewBar, #mfPreviewBarShow {
   display: none !important;
 }
