--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,4 +1,5 @@
 @import "compass/reset";
+@import "compass/css3/appearance";
 @import "compass/css3/transition";
 @import "compass/css3/transform";
 @import "compass/utilities/general/clearfix";
@@ -6,7 +7,8 @@
 /****************************************
 * Variables
 ****************************************/
-$wesual-purple: #970097;
+$wesual-purple: rgb(151, 0, 151);
+$wesual-purple-hover: rgb(151, 0, 151);
 
 /****************************************
 * Util classes
@@ -18,11 +20,42 @@ $wesual-purple: #970097;
 /****************************************
 * Framework
 ****************************************/
+%base-font {
+	font-family: 'Open Sans', sans-serif;
+	font-size: 16px;
+	font-weight: 300;	
+}
+
+html, body {
+	@extend %base-font;
+
+	&::selection,
+	&::-moz-selection { background: rgba(151, 0, 151, 0.5); }
+}
+
 a {
 	@include transition(color 150ms ease);
 	text-decoration: none;
 }
 
+input:focus,
+select:focus,
+textarea:focus,
+button:focus { outline: none; }
+
+.base-input, 
+.base-button {
+	@extend %base-font;
+	@include appearance(none);
+	padding: 15px;
+	border: none;
+	font-size: 16px;
+}
+
+.base-button {
+	cursor: pointer;
+	background: #fff;
+}
 
 .row { 
 	@include clearfix;
