--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,4 +1,4 @@
-/* line 17, ../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-0.12.6/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 17, ../../../../.rvm/gems/ruby-1.8.7-p374/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -20,45 +20,45 @@ time, mark, audio, video {
   vertical-align: baseline;
 }
 
-/* line 22, ../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-0.12.6/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 22, ../../../../.rvm/gems/ruby-1.8.7-p374/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 html {
   line-height: 1;
 }
 
-/* line 24, ../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-0.12.6/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 24, ../../../../.rvm/gems/ruby-1.8.7-p374/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 ol, ul {
   list-style: none;
 }
 
-/* line 26, ../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-0.12.6/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 26, ../../../../.rvm/gems/ruby-1.8.7-p374/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 table {
   border-collapse: collapse;
   border-spacing: 0;
 }
 
-/* line 28, ../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-0.12.6/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 28, ../../../../.rvm/gems/ruby-1.8.7-p374/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 caption, th, td {
   text-align: left;
   font-weight: normal;
   vertical-align: middle;
 }
 
-/* line 30, ../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-0.12.6/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 30, ../../../../.rvm/gems/ruby-1.8.7-p374/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 q, blockquote {
   quotes: none;
 }
-/* line 103, ../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-0.12.6/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 103, ../../../../.rvm/gems/ruby-1.8.7-p374/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 q:before, q:after, blockquote:before, blockquote:after {
   content: "";
   content: none;
 }
 
-/* line 32, ../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-0.12.6/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 32, ../../../../.rvm/gems/ruby-1.8.7-p374/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 a img {
   border: none;
 }
 
-/* line 116, ../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-0.12.6/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 116, ../../../../.rvm/gems/ruby-1.8.7-p374/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section, summary {
   display: block;
 }
@@ -69,12 +69,12 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 /****************************************
 * Util classes
 ****************************************/
-/* line 16, ../../scss/main.scss */
+/* line 17, ../../scss/main.scss */
 .left {
   float: left;
 }
 
-/* line 18, ../../scss/main.scss */
+/* line 19, ../../scss/main.scss */
 .right {
   float: right;
 }
@@ -82,7 +82,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 /****************************************
 * Framework
 ****************************************/
-/* line 23, ../../scss/main.scss */
+/* line 24, ../../scss/main.scss */
 html, body, .base-input,
 .base-button {
   font-family: 'Open Sans', sans-serif;
@@ -90,12 +90,12 @@ html, body, .base-input,
   font-weight: 300;
 }
 
-/* line 33, ../../scss/main.scss */
+/* line 34, ../../scss/main.scss */
 html::selection, html::-moz-selection, body::selection, body::-moz-selection {
   background: rgba(151, 0, 151, 0.5);
 }
 
-/* line 36, ../../scss/main.scss */
+/* line 37, ../../scss/main.scss */
 a {
   -webkit-transition: color 150ms ease;
   -moz-transition: color 150ms ease;
@@ -104,7 +104,7 @@ a {
   text-decoration: none;
 }
 
-/* line 44, ../../scss/main.scss */
+/* line 45, ../../scss/main.scss */
 input:focus,
 select:focus,
 textarea:focus,
@@ -112,7 +112,7 @@ button:focus {
   outline: none;
 }
 
-/* line 47, ../../scss/main.scss */
+/* line 48, ../../scss/main.scss */
 .base-input,
 .base-button {
   -webkit-appearance: none;
@@ -123,40 +123,41 @@ button:focus {
   font-size: 16px;
 }
 
-/* line 55, ../../scss/main.scss */
+/* line 56, ../../scss/main.scss */
 .base-button {
   cursor: pointer;
-  background: #fff;
+  background: #511180;
+  color: #fff;
 }
 
-/* line 60, ../../scss/main.scss */
+/* line 62, ../../scss/main.scss */
 .row {
   overflow: hidden;
   *zoom: 1;
   width: 100%;
 }
 
-/* line 65, ../../scss/main.scss */
+/* line 67, ../../scss/main.scss */
 .purple-background {
-  background: #970097;
+  background: #7118b2;
   color: #fff;
 }
-/* line 69, ../../scss/main.scss */
+/* line 71, ../../scss/main.scss */
 .purple-background a {
   color: #fff;
 }
-/* line 70, ../../scss/main.scss */
+/* line 72, ../../scss/main.scss */
 .purple-background a:hover {
   color: #000;
 }
 
-/* line 73, ../../scss/main.scss */
+/* line 75, ../../scss/main.scss */
 .container {
   max-width: 960px;
   margin: 0 auto;
 }
 
-/* line 78, ../../scss/main.scss */
+/* line 80, ../../scss/main.scss */
 .logo {
   text-indent: -9999px;
   background-image: url("");
@@ -167,22 +168,22 @@ button:focus {
 /****************************************
 * Index 
 ****************************************/
-/* line 89, ../../scss/main.scss */
+/* line 91, ../../scss/main.scss */
 .menu-header {
   line-height: 80px;
 }
 
-/* line 94, ../../scss/main.scss */
+/* line 96, ../../scss/main.scss */
 .menu li {
   display: inline-block;
   margin-right: 5px;
 }
 
-/* line 100, ../../scss/main.scss */
+/* line 102, ../../scss/main.scss */
 .hero {
   height: 800px;
 }
-/* line 103, ../../scss/main.scss */
+/* line 105, ../../scss/main.scss */
 .hero .container {
   height: 100%;
 }
@@ -190,7 +191,7 @@ button:focus {
 /****************************************
 * Misc.
 ****************************************/
-/* line 110, ../../scss/main.scss */
+/* line 112, ../../scss/main.scss */
 #mfPreviewBar, #mfPreviewBarShow {
   display: none !important;
 }
