--- a/scss/main.scss
+++ b/scss/main.scss
@@ -7,7 +7,8 @@
 /****************************************
 * Variables
 ****************************************/
-$wesual-purple: rgb(151, 0, 151);
+$wesual-purple: #7118b2;
+$wesual-dark-purple: #511180;
 $wesual-purple-hover: rgb(151, 0, 151);
 
 /****************************************
@@ -54,7 +55,8 @@ button:focus { outline: none; }
 
 .base-button {
 	cursor: pointer;
-	background: #fff;
+	background: $wesual-dark-purple;
+	color: #fff;
 }
 
 .row { 
