--- a/scss/main.scss
+++ b/scss/main.scss
@@ -79,9 +79,11 @@ button:focus { outline: none; }
 
 .logo {
 	text-indent: -9999px;
-	background-image: url('');
+	background-image: url('/img/wesual.png');
 	background-size: 100%;
 	background-repeat: no-repeat;
+	width: 128px;
+	height: 28px;
 }
 
 /****************************************
