--- a/scss/main.scss
+++ b/scss/main.scss
@@ -91,6 +91,7 @@ button:focus { outline: none; }
 ****************************************/
 
 .menu-header {
+	padding-top: 28px;
 	line-height: 80px;
 }
 
