--- a/public/css/main.css
+++ b/public/css/main.css
@@ -172,20 +172,21 @@ button:focus {
 ****************************************/
 /* line 93, ../../scss/main.scss */
 .menu-header {
+  padding-top: 28px;
   line-height: 80px;
 }
 
-/* line 98, ../../scss/main.scss */
+/* line 99, ../../scss/main.scss */
 .menu li {
   display: inline-block;
   margin-right: 5px;
 }
 
-/* line 104, ../../scss/main.scss */
+/* line 105, ../../scss/main.scss */
 .hero {
   height: 800px;
 }
-/* line 107, ../../scss/main.scss */
+/* line 108, ../../scss/main.scss */
 .hero .container {
   height: 100%;
 }
@@ -193,7 +194,7 @@ button:focus {
 /****************************************
 * Misc.
 ****************************************/
-/* line 114, ../../scss/main.scss */
+/* line 115, ../../scss/main.scss */
 #mfPreviewBar, #mfPreviewBarShow {
   display: none !important;
 }
