--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,4 +1,4 @@
-/* line 17, ../../../../.rvm/gems/ruby-1.8.7-p374/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 17, ../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-0.12.6/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -20,45 +20,45 @@ time, mark, audio, video {
   vertical-align: baseline;
 }
 
-/* line 22, ../../../../.rvm/gems/ruby-1.8.7-p374/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 22, ../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-0.12.6/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 html {
   line-height: 1;
 }
 
-/* line 24, ../../../../.rvm/gems/ruby-1.8.7-p374/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 24, ../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-0.12.6/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 ol, ul {
   list-style: none;
 }
 
-/* line 26, ../../../../.rvm/gems/ruby-1.8.7-p374/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 26, ../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-0.12.6/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 table {
   border-collapse: collapse;
   border-spacing: 0;
 }
 
-/* line 28, ../../../../.rvm/gems/ruby-1.8.7-p374/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 28, ../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-0.12.6/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 caption, th, td {
   text-align: left;
   font-weight: normal;
   vertical-align: middle;
 }
 
-/* line 30, ../../../../.rvm/gems/ruby-1.8.7-p374/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 30, ../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-0.12.6/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 q, blockquote {
   quotes: none;
 }
-/* line 103, ../../../../.rvm/gems/ruby-1.8.7-p374/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 103, ../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-0.12.6/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 q:before, q:after, blockquote:before, blockquote:after {
   content: "";
   content: none;
 }
 
-/* line 32, ../../../../.rvm/gems/ruby-1.8.7-p374/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 32, ../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-0.12.6/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 a img {
   border: none;
 }
 
-/* line 116, ../../../../.rvm/gems/ruby-1.8.7-p374/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 116, ../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-0.12.6/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section, summary {
   display: block;
 }
@@ -69,12 +69,12 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 /****************************************
 * Util classes
 ****************************************/
-/* line 17, ../../scss/main.scss */
+/* line 18, ../../scss/main.scss */
 .left {
   float: left;
 }
 
-/* line 19, ../../scss/main.scss */
+/* line 20, ../../scss/main.scss */
 .right {
   float: right;
 }
@@ -82,7 +82,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 /****************************************
 * Framework
 ****************************************/
-/* line 24, ../../scss/main.scss */
+/* line 25, ../../scss/main.scss */
 html, body, .base-input,
 .base-button {
   font-family: 'Open Sans', sans-serif;
@@ -90,30 +90,22 @@ html, body, .base-input,
   font-weight: 300;
 }
 
-<<<<<<< HEAD
-/* line 30, ../../scss/main.scss */
+/* line 31, ../../scss/main.scss */
 ::selection {
   background: rgba(151, 0, 151, 0.5);
 }
 
-/* line 31, ../../scss/main.scss */
+/* line 32, ../../scss/main.scss */
 ::-moz-selection {
   background: rgba(151, 0, 151, 0.5);
 }
 
-/* line 33, ../../scss/main.scss */
+/* line 34, ../../scss/main.scss */
 * {
   box-sizing: border-box;
 }
 
-=======
-/* line 34, ../../scss/main.scss */
-html::selection, html::-moz-selection, body::selection, body::-moz-selection {
-  background: rgba(151, 0, 151, 0.5);
-}
-
->>>>>>> FETCH_HEAD
-/* line 37, ../../scss/main.scss */
+/* line 38, ../../scss/main.scss */
 a {
   -webkit-transition: color 150ms ease;
   -moz-transition: color 150ms ease;
@@ -122,7 +114,7 @@ a {
   text-decoration: none;
 }
 
-/* line 45, ../../scss/main.scss */
+/* line 46, ../../scss/main.scss */
 input:focus,
 select:focus,
 textarea:focus,
@@ -130,7 +122,7 @@ button:focus {
   outline: none;
 }
 
-/* line 48, ../../scss/main.scss */
+/* line 49, ../../scss/main.scss */
 .base-input,
 .base-button {
   -webkit-appearance: none;
@@ -141,65 +133,41 @@ button:focus {
   font-size: 16px;
 }
 
-/* line 56, ../../scss/main.scss */
+/* line 57, ../../scss/main.scss */
 .base-button {
   cursor: pointer;
   background: #511180;
   color: #fff;
 }
 
-<<<<<<< HEAD
-/* line 61, ../../scss/main.scss */
-=======
-/* line 62, ../../scss/main.scss */
->>>>>>> FETCH_HEAD
+/* line 63, ../../scss/main.scss */
 .row {
   overflow: hidden;
   *zoom: 1;
   width: 100%;
 }
 
-<<<<<<< HEAD
-/* line 66, ../../scss/main.scss */
-=======
-/* line 67, ../../scss/main.scss */
->>>>>>> FETCH_HEAD
+/* line 68, ../../scss/main.scss */
 .purple-background {
   background: #7118b2;
   color: #fff;
 }
-<<<<<<< HEAD
-/* line 70, ../../scss/main.scss */
-.purple-background a {
-  color: #fff;
-}
-/* line 71, ../../scss/main.scss */
-=======
-/* line 71, ../../scss/main.scss */
-.purple-background a {
-  color: #fff;
-}
 /* line 72, ../../scss/main.scss */
->>>>>>> FETCH_HEAD
+.purple-background a {
+  color: #fff;
+}
+/* line 73, ../../scss/main.scss */
 .purple-background a:hover {
   color: #000;
 }
 
-<<<<<<< HEAD
-/* line 74, ../../scss/main.scss */
-=======
-/* line 75, ../../scss/main.scss */
->>>>>>> FETCH_HEAD
+/* line 76, ../../scss/main.scss */
 .container {
   max-width: 960px;
   margin: 0 auto;
 }
 
-<<<<<<< HEAD
-/* line 79, ../../scss/main.scss */
-=======
-/* line 80, ../../scss/main.scss */
->>>>>>> FETCH_HEAD
+/* line 81, ../../scss/main.scss */
 .logo {
   text-indent: -9999px;
   background-image: url("/img/wesual.png");
@@ -212,56 +180,40 @@ button:focus {
 /****************************************
 * Index 
 ****************************************/
-<<<<<<< HEAD
-/* line 90, ../../scss/main.scss */
-=======
-/* line 93, ../../scss/main.scss */
->>>>>>> FETCH_HEAD
+/* line 94, ../../scss/main.scss */
 .menu-header {
   padding-top: 28px;
   line-height: 80px;
 }
 
-<<<<<<< HEAD
-/* line 95, ../../scss/main.scss */
-=======
-/* line 99, ../../scss/main.scss */
->>>>>>> FETCH_HEAD
+/* line 100, ../../scss/main.scss */
 .menu li {
   display: inline-block;
   margin-right: 5px;
 }
 
-<<<<<<< HEAD
-/* line 101, ../../scss/main.scss */
+/* line 106, ../../scss/main.scss */
 .hero {
   height: 800px;
 }
-/* line 104, ../../scss/main.scss */
-=======
-/* line 105, ../../scss/main.scss */
-.hero {
-  height: 800px;
-}
-/* line 108, ../../scss/main.scss */
->>>>>>> FETCH_HEAD
+/* line 109, ../../scss/main.scss */
 .hero .container {
   height: 100%;
 }
 
-/* line 107, ../../scss/main.scss */
+/* line 112, ../../scss/main.scss */
 .feature-list {
   text-align: center;
 }
 
-/* line 111, ../../scss/main.scss */
+/* line 116, ../../scss/main.scss */
 .feature {
   display: inline-block;
   text-align: center;
   width: 33%;
 }
 
-/* line 117, ../../scss/main.scss */
+/* line 122, ../../scss/main.scss */
 .feature-bubble {
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
@@ -275,11 +227,7 @@ button:focus {
 /****************************************
 * Misc.
 ****************************************/
-<<<<<<< HEAD
-/* line 127, ../../scss/main.scss */
-=======
-/* line 115, ../../scss/main.scss */
->>>>>>> FETCH_HEAD
+/* line 132, ../../scss/main.scss */
 #mfPreviewBar, #mfPreviewBarShow {
   display: none !important;
 }
