--- a/scss/main.scss
+++ b/scss/main.scss
@@ -57,6 +57,8 @@ button:focus { outline: none; }
 .base-button {
 	cursor: pointer;
 	background: $wesual-dark-purple;
+	text-transform: uppercase;
+	font-size: 15px;
 	color: #fff;
 }
 
@@ -98,12 +100,13 @@ button:focus { outline: none; }
 .menu {
 	li {
 		display: inline-block;
-		margin-right: 5px;
+		margin-left: 15px;
 	}
 }
 
 .hero {
 	height: 800px;
+	position: relative;
 
 	.container { height: 100%; }
 }
