Update features section style

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -168,48 +168,50 @@ button:focus {
   cursor: pointer;
   background: #511180;
   text-transform: uppercase;
-  font-size: 15px;
+  font-size: 13px;
+  font-weight: 600;
   color: #fff;
+  padding: 18px 18px 17px 18px;
 }
 
-/* line 85, ../../scss/main.scss */
+/* line 87, ../../scss/main.scss */
 .row {
   overflow: hidden;
   *zoom: 1;
   width: 100%;
 }
 
-/* line 90, ../../scss/main.scss */
+/* line 92, ../../scss/main.scss */
 .purple {
   color: #7118b2;
 }
 
-/* line 92, ../../scss/main.scss */
+/* line 94, ../../scss/main.scss */
 .purple-background {
   background: #7118b2;
   color: #fff;
 }
-/* line 96, ../../scss/main.scss */
+/* line 98, ../../scss/main.scss */
 .purple-background a {
   color: #fff;
 }
-/* line 97, ../../scss/main.scss */
+/* line 99, ../../scss/main.scss */
 .purple-background a:hover {
   color: #000;
 }
 
-/* line 100, ../../scss/main.scss */
+/* line 102, ../../scss/main.scss */
 .container {
   max-width: 960px;
   margin: 0 auto;
 }
 
-/* line 105, ../../scss/main.scss */
+/* line 107, ../../scss/main.scss */
 .base-section-padding {
   padding: 80px;
 }
 
-/* line 107, ../../scss/main.scss */
+/* line 109, ../../scss/main.scss */
 .logo {
   text-indent: -9999px;
   background-image: url("/img/wesual.png");
@@ -222,48 +224,45 @@ button:focus {
 /****************************************
 * Index 
 ****************************************/
-/* line 120, ../../scss/main.scss */
+/* line 122, ../../scss/main.scss */
 .menu-header {
   padding-top: 28px;
 }
 
-/* line 125, ../../scss/main.scss */
+/* line 127, ../../scss/main.scss */
 .menu li {
   display: inline-block;
   margin-left: 15px;
 }
 
-/* line 131, ../../scss/main.scss */
+/* line 133, ../../scss/main.scss */
 .hero {
   height: 800px;
   position: relative;
 }
-/* line 135, ../../scss/main.scss */
+/* line 137, ../../scss/main.scss */
 .hero .container {
   height: 100%;
 }
 
-/* line 138, ../../scss/main.scss */
+/* line 140, ../../scss/main.scss */
 .features {
   text-align: center;
 }
-/* line 141, ../../scss/main.scss */
-.features h2 {
-  margin: 0 auto 50px;
-}
 
-/* line 144, ../../scss/main.scss */
+/* line 142, ../../scss/main.scss */
 .feature {
   display: inline-block;
   text-align: center;
   width: 33%;
+  margin-top: 40px;
 }
-/* line 149, ../../scss/main.scss */
+/* line 148, ../../scss/main.scss */
 .feature strong {
   margin-bottom: 10px;
 }
 
-/* line 152, ../../scss/main.scss */
+/* line 151, ../../scss/main.scss */
 .feature-bubble {
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
@@ -278,7 +277,7 @@ button:focus {
 /****************************************
 * Misc.
 ****************************************/
-/* line 163, ../../scss/main.scss */
+/* line 162, ../../scss/main.scss */
 #mfPreviewBar, #mfPreviewBarShow {
   display: none !important;
 }
