--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,4 +1,4 @@
-/* line 17, ../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-0.12.6/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 17, ../../../../.rvm/gems/ruby-1.8.7-p374/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -20,45 +20,45 @@ time, mark, audio, video {
   vertical-align: baseline;
 }
 
-/* line 22, ../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-0.12.6/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 22, ../../../../.rvm/gems/ruby-1.8.7-p374/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 html {
   line-height: 1;
 }
 
-/* line 24, ../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-0.12.6/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 24, ../../../../.rvm/gems/ruby-1.8.7-p374/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 ol, ul {
   list-style: none;
 }
 
-/* line 26, ../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-0.12.6/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 26, ../../../../.rvm/gems/ruby-1.8.7-p374/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 table {
   border-collapse: collapse;
   border-spacing: 0;
 }
 
-/* line 28, ../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-0.12.6/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 28, ../../../../.rvm/gems/ruby-1.8.7-p374/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 caption, th, td {
   text-align: left;
   font-weight: normal;
   vertical-align: middle;
 }
 
-/* line 30, ../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-0.12.6/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 30, ../../../../.rvm/gems/ruby-1.8.7-p374/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 q, blockquote {
   quotes: none;
 }
-/* line 103, ../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-0.12.6/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 103, ../../../../.rvm/gems/ruby-1.8.7-p374/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 q:before, q:after, blockquote:before, blockquote:after {
   content: "";
   content: none;
 }
 
-/* line 32, ../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-0.12.6/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 32, ../../../../.rvm/gems/ruby-1.8.7-p374/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 a img {
   border: none;
 }
 
-/* line 116, ../../../../../../Library/Ruby/Gems/2.0.0/gems/compass-0.12.6/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
+/* line 116, ../../../../.rvm/gems/ruby-1.8.7-p374/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/reset/_utilities.scss */
 article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section, summary {
   display: block;
 }
@@ -69,17 +69,17 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 /****************************************
 * Util classes
 ****************************************/
-/* line 18, ../../scss/main.scss */
+/* line 19, ../../scss/main.scss */
 .left {
   float: left;
 }
 
-/* line 20, ../../scss/main.scss */
+/* line 21, ../../scss/main.scss */
 .right {
   float: right;
 }
 
-/* line 22, ../../scss/main.scss */
+/* line 23, ../../scss/main.scss */
 .block {
   display: block;
 }
@@ -87,7 +87,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 /****************************************
 * Typography
 ****************************************/
-/* line 28, ../../scss/main.scss */
+/* line 29, ../../scss/main.scss */
 html, body, .base-input,
 .base-button {
   font-family: 'Open Sans', sans-serif;
@@ -95,29 +95,29 @@ html, body, .base-input,
   font-weight: 300;
 }
 
-/* line 34, ../../scss/main.scss */
+/* line 35, ../../scss/main.scss */
 h1, h2, h3 {
   font-family: 'Grumpy Black 24', serif;
   line-height: 1.1;
   letter-spacing: -2px;
 }
 
-/* line 44, ../../scss/main.scss */
+/* line 45, ../../scss/main.scss */
 h2 {
   font-size: 92px;
 }
 
-/* line 46, ../../scss/main.scss */
+/* line 47, ../../scss/main.scss */
 strong {
   font-weight: 700;
 }
 
-/* line 48, ../../scss/main.scss */
+/* line 49, ../../scss/main.scss */
 p {
   line-height: 1.5;
 }
 
-/* line 50, ../../scss/main.scss */
+/* line 51, ../../scss/main.scss */
 a {
   -webkit-transition: color 150ms ease;
   -moz-transition: color 150ms ease;
@@ -129,22 +129,22 @@ a {
 /****************************************
 * Framework
 ****************************************/
-/* line 58, ../../scss/main.scss */
+/* line 59, ../../scss/main.scss */
 ::selection {
   background: rgba(151, 0, 151, 0.5);
 }
 
-/* line 59, ../../scss/main.scss */
+/* line 60, ../../scss/main.scss */
 ::-moz-selection {
   background: rgba(151, 0, 151, 0.5);
 }
 
-/* line 61, ../../scss/main.scss */
+/* line 62, ../../scss/main.scss */
 * {
   box-sizing: border-box;
 }
 
-/* line 66, ../../scss/main.scss */
+/* line 67, ../../scss/main.scss */
 input:focus,
 select:focus,
 textarea:focus,
@@ -152,7 +152,7 @@ button:focus {
   outline: none;
 }
 
-/* line 69, ../../scss/main.scss */
+/* line 70, ../../scss/main.scss */
 .base-input,
 .base-button {
   -webkit-appearance: none;
@@ -163,7 +163,7 @@ button:focus {
   font-size: 16px;
 }
 
-/* line 77, ../../scss/main.scss */
+/* line 78, ../../scss/main.scss */
 .base-button {
   cursor: pointer;
   background: #511180;
@@ -172,53 +172,60 @@ button:focus {
   color: #fff;
 }
 
-/* line 85, ../../scss/main.scss */
+/* line 86, ../../scss/main.scss */
 .row {
   overflow: hidden;
   *zoom: 1;
   width: 100%;
 }
 
-/* line 90, ../../scss/main.scss */
+/* line 91, ../../scss/main.scss */
 .purple {
   color: #7118b2;
 }
 
-/* line 92, ../../scss/main.scss */
+/* line 93, ../../scss/main.scss */
+.grey-background {
+  background: #edf1f2;
+  color: #000;
+}
+
+/* line 98, ../../scss/main.scss */
 .purple-background {
   background: #7118b2;
   color: #fff;
 }
-/* line 96, ../../scss/main.scss */
+/* line 102, ../../scss/main.scss */
 .purple-background a {
   color: #fff;
 }
-/* line 97, ../../scss/main.scss */
+/* line 103, ../../scss/main.scss */
 .purple-background a:hover {
   color: #000;
 }
 
-/* line 100, ../../scss/main.scss */
+/* line 106, ../../scss/main.scss */
 .container {
   max-width: 980px;
   margin: 0 auto;
 }
 
-<<<<<<< HEAD
-/* line 83, ../../scss/main.scss */
+/* line 111, ../../scss/main.scss */
 .header-padding {
   padding: 28px;
 }
 
-/* line 87, ../../scss/main.scss */
-=======
-/* line 105, ../../scss/main.scss */
+/* line 115, ../../scss/main.scss */
+.hero-padding {
+  padding: 135px 28px;
+}
+
+/* line 119, ../../scss/main.scss */
 .base-section-padding {
   padding: 80px;
 }
 
-/* line 107, ../../scss/main.scss */
->>>>>>> 52a4b7cb375ab156c8c213801bb9fd0435d39164
+/* line 121, ../../scss/main.scss */
 .logo {
   text-indent: -9999px;
   background-image: url("/img/wesual.png");
@@ -228,54 +235,31 @@ button:focus {
   height: 28px;
 }
 
+/* line 130, ../../scss/main.scss */
+p {
+  max-width: 500px;
+}
+
 /****************************************
 * Index 
 ****************************************/
-<<<<<<< HEAD
-/* line 101, ../../scss/main.scss */
-=======
-/* line 120, ../../scss/main.scss */
-.menu-header {
-  padding-top: 28px;
-}
-
-/* line 125, ../../scss/main.scss */
->>>>>>> 52a4b7cb375ab156c8c213801bb9fd0435d39164
+/* line 139, ../../scss/main.scss */
 .menu li {
   display: inline-block;
   margin-left: 15px;
 }
 
-<<<<<<< HEAD
-/* line 107, ../../scss/main.scss */
+/* line 145, ../../scss/main.scss */
 .relative {
   position: relative;
 }
 
-/* line 111, ../../scss/main.scss */
-.hero {
-  height: 800px;
-}
-/* line 114, ../../scss/main.scss */
-=======
-/* line 131, ../../scss/main.scss */
-.hero {
-  height: 800px;
-  position: relative;
-}
-/* line 135, ../../scss/main.scss */
->>>>>>> 52a4b7cb375ab156c8c213801bb9fd0435d39164
-.hero .container {
-  height: 100%;
-}
-
-<<<<<<< HEAD
-/* line 117, ../../scss/main.scss */
+/* line 149, ../../scss/main.scss */
 .hero-container {
   width: 650px;
 }
 
-/* line 121, ../../scss/main.scss */
+/* line 153, ../../scss/main.scss */
 .hero-tv {
   position: absolute;
   left: 780px;
@@ -283,39 +267,27 @@ button:focus {
   width: 676px;
 }
 
-/* line 128, ../../scss/main.scss */
+/* line 160, ../../scss/main.scss */
 .feature-list {
-=======
-/* line 138, ../../scss/main.scss */
-.features {
->>>>>>> 52a4b7cb375ab156c8c213801bb9fd0435d39164
   text-align: center;
 }
-/* line 141, ../../scss/main.scss */
-.features h2 {
+/* line 163, ../../scss/main.scss */
+.feature-list h2 {
   margin: 0 auto 50px;
 }
 
-<<<<<<< HEAD
-/* line 132, ../../scss/main.scss */
-=======
-/* line 144, ../../scss/main.scss */
->>>>>>> 52a4b7cb375ab156c8c213801bb9fd0435d39164
+/* line 166, ../../scss/main.scss */
 .feature {
   display: inline-block;
   text-align: center;
   width: 33%;
 }
-/* line 149, ../../scss/main.scss */
+/* line 171, ../../scss/main.scss */
 .feature strong {
   margin-bottom: 10px;
 }
 
-<<<<<<< HEAD
-/* line 138, ../../scss/main.scss */
-=======
-/* line 152, ../../scss/main.scss */
->>>>>>> 52a4b7cb375ab156c8c213801bb9fd0435d39164
+/* line 174, ../../scss/main.scss */
 .feature-bubble {
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
@@ -330,11 +302,7 @@ button:focus {
 /****************************************
 * Misc.
 ****************************************/
-<<<<<<< HEAD
-/* line 148, ../../scss/main.scss */
-=======
-/* line 163, ../../scss/main.scss */
->>>>>>> 52a4b7cb375ab156c8c213801bb9fd0435d39164
+/* line 185, ../../scss/main.scss */
 #mfPreviewBar, #mfPreviewBarShow {
   display: none !important;
 }
