--- a/public/css/main.css
+++ b/public/css/main.css
@@ -91,7 +91,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 html, body, .base-input,
 .base-button {
   font-family: 'Open Sans', sans-serif;
-  font-size: 16px;
+  font-size: 20px;
   font-weight: 300;
 }
 
@@ -115,9 +115,11 @@ strong {
 /* line 49, ../../scss/main.scss */
 p {
   line-height: 1.5;
+  max-width: 570px;
+  margin-bottom: 20px;
 }
 
-/* line 51, ../../scss/main.scss */
+/* line 55, ../../scss/main.scss */
 a {
   -webkit-transition: color 150ms ease;
   -moz-transition: color 150ms ease;
@@ -129,22 +131,22 @@ a {
 /****************************************
 * Framework
 ****************************************/
-/* line 59, ../../scss/main.scss */
+/* line 63, ../../scss/main.scss */
 ::selection {
   background: rgba(151, 0, 151, 0.5);
 }
 
-/* line 60, ../../scss/main.scss */
+/* line 64, ../../scss/main.scss */
 ::-moz-selection {
   background: rgba(151, 0, 151, 0.5);
 }
 
-/* line 62, ../../scss/main.scss */
+/* line 66, ../../scss/main.scss */
 * {
   box-sizing: border-box;
 }
 
-/* line 67, ../../scss/main.scss */
+/* line 71, ../../scss/main.scss */
 input:focus,
 select:focus,
 textarea:focus,
@@ -152,80 +154,88 @@ button:focus {
   outline: none;
 }
 
-/* line 70, ../../scss/main.scss */
+/* line 74, ../../scss/main.scss */
 .base-input,
 .base-button {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
-  padding: 15px;
   border: none;
-  font-size: 16px;
 }
 
-/* line 78, ../../scss/main.scss */
+/* line 80, ../../scss/main.scss */
 .base-button {
   cursor: pointer;
   background: #511180;
   text-transform: uppercase;
-  font-size: 15px;
+  font-size: 18px;
+  font-weight: 700;
+  padding: 18px;
   color: #fff;
 }
 
-/* line 86, ../../scss/main.scss */
+/* line 90, ../../scss/main.scss */
+.signup-input {
+  padding: 17px;
+  width: 360px;
+  margin-right: 10px;
+  font-size: 20px;
+}
+
+/* line 97, ../../scss/main.scss */
 .row {
   overflow: hidden;
   *zoom: 1;
   width: 100%;
 }
 
-/* line 91, ../../scss/main.scss */
+/* line 102, ../../scss/main.scss */
 .purple {
   color: #7118b2;
 }
 
-/* line 93, ../../scss/main.scss */
+/* line 104, ../../scss/main.scss */
 .grey-background {
   background: #edf1f2;
   color: #000;
 }
 
-/* line 98, ../../scss/main.scss */
+/* line 109, ../../scss/main.scss */
 .purple-background {
   background: #7118b2;
   color: #fff;
 }
-/* line 102, ../../scss/main.scss */
+/* line 113, ../../scss/main.scss */
 .purple-background a {
   color: #fff;
 }
-/* line 103, ../../scss/main.scss */
+/* line 114, ../../scss/main.scss */
 .purple-background a:hover {
   color: #000;
 }
 
-/* line 106, ../../scss/main.scss */
+/* line 117, ../../scss/main.scss */
 .container {
   max-width: 980px;
   margin: 0 auto;
 }
 
-/* line 111, ../../scss/main.scss */
+/* line 122, ../../scss/main.scss */
 .header-padding {
   padding: 28px;
 }
 
-/* line 115, ../../scss/main.scss */
+/* line 126, ../../scss/main.scss */
 .hero-padding {
   padding: 135px 28px;
 }
 
-/* line 119, ../../scss/main.scss */
+/* line 130, ../../scss/main.scss */
 .base-section-padding {
   padding: 80px;
 }
 
-/* line 121, ../../scss/main.scss */
+/* line 132, ../../scss/main.scss */
 .logo {
   text-indent: -9999px;
   background-image: url("/img/wesual.png");
@@ -235,59 +245,54 @@ button:focus {
   height: 28px;
 }
 
-/* line 130, ../../scss/main.scss */
-p {
-  max-width: 500px;
-}
-
 /****************************************
 * Index 
 ****************************************/
-/* line 139, ../../scss/main.scss */
+/* line 146, ../../scss/main.scss */
 .menu li {
   display: inline-block;
   margin-left: 15px;
 }
 
-/* line 145, ../../scss/main.scss */
+/* line 152, ../../scss/main.scss */
 .relative {
   position: relative;
 }
 
-/* line 149, ../../scss/main.scss */
+/* line 156, ../../scss/main.scss */
 .hero-container {
   width: 650px;
 }
 
-/* line 153, ../../scss/main.scss */
+/* line 160, ../../scss/main.scss */
 .hero-tv {
   position: absolute;
-  left: 780px;
-  top: 30px;
+  left: 690px;
+  top: 100px;
   width: 676px;
 }
 
-/* line 160, ../../scss/main.scss */
+/* line 167, ../../scss/main.scss */
 .feature-list {
   text-align: center;
 }
-/* line 163, ../../scss/main.scss */
+/* line 170, ../../scss/main.scss */
 .feature-list h2 {
   margin: 0 auto 50px;
 }
 
-/* line 166, ../../scss/main.scss */
+/* line 173, ../../scss/main.scss */
 .feature {
   display: inline-block;
   text-align: center;
   width: 33%;
 }
-/* line 171, ../../scss/main.scss */
+/* line 178, ../../scss/main.scss */
 .feature strong {
   margin-bottom: 10px;
 }
 
-/* line 174, ../../scss/main.scss */
+/* line 181, ../../scss/main.scss */
 .feature-bubble {
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
@@ -302,7 +307,7 @@ p {
 /****************************************
 * Misc.
 ****************************************/
-/* line 185, ../../scss/main.scss */
+/* line 192, ../../scss/main.scss */
 #mfPreviewBar, #mfPreviewBarShow {
   display: none !important;
 }
