Added hoverstates to menu

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -249,37 +249,47 @@ button:focus {
 /****************************************
 * Index 
 ****************************************/
-/* line 148, ../../scss/main.scss */
+/* line 147, ../../scss/main.scss */
+.menu-header {
+  overflow: visible;
+}
+
+/* line 152, ../../scss/main.scss */
 .menu li {
   display: inline-block;
   margin-left: 15px;
 }
-/* line 152, ../../scss/main.scss */
+/* line 156, ../../scss/main.scss */
 .menu li a {
   position: relative;
+  color: #7118b2;
 }
-/* line 154, ../../scss/main.scss */
+/* line 161, ../../scss/main.scss */
 .menu li a:after {
-  -webkit-transition: all 150ms ease;
-  -moz-transition: all 150ms ease;
-  -o-transition: all 150ms ease;
-  transition: all 150ms ease;
-  -webkit-transform: translate3d(0, 7px, 0);
-  -moz-transform: translate3d(0, 7px, 0);
-  -ms-transform: translate3d(0, 7px, 0);
-  -o-transform: translate3d(0, 7px, 0);
-  transform: translate3d(0, 7px, 0);
+  -webkit-transition: all 200ms ease;
+  -moz-transition: all 200ms ease;
+  -o-transition: all 200ms ease;
+  transition: all 200ms ease;
+  -webkit-transform: translate3d(0, 8px, 0);
+  -moz-transform: translate3d(0, 8px, 0);
+  -ms-transform: translate3d(0, 8px, 0);
+  -o-transform: translate3d(0, 8px, 0);
+  transform: translate3d(0, 8px, 0);
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=0);
   opacity: 0;
   position: absolute;
   top: 100%;
   left: 0;
   width: 100%;
-  height: 1px;
+  height: 2px;
   background: #7118b2;
   content: '';
 }
-/* line 167, ../../scss/main.scss */
+/* line 174, ../../scss/main.scss */
+.menu li a:hover {
+  color: #7118b2;
+}
+/* line 177, ../../scss/main.scss */
 .menu li a:hover:after {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=25);
   opacity: 0.25;
@@ -290,26 +300,17 @@ button:focus {
   transform: translate3d(0, 2px, 0);
 }
 
-/* line 176, ../../scss/main.scss */
+/* line 185, ../../scss/main.scss */
 .relative {
   position: relative;
 }
 
-/* line 180, ../../scss/main.scss */
-.hero {
-  height: 800px;
-}
-/* line 183, ../../scss/main.scss */
-.hero .container {
-  height: 100%;
-}
-
-/* line 186, ../../scss/main.scss */
+/* line 189, ../../scss/main.scss */
 .hero-container {
   width: 650px;
 }
 
-/* line 190, ../../scss/main.scss */
+/* line 193, ../../scss/main.scss */
 .hero-tv {
   position: absolute;
   left: 690px;
@@ -317,24 +318,24 @@ button:focus {
   width: 676px;
 }
 
-/* line 197, ../../scss/main.scss */
+/* line 200, ../../scss/main.scss */
 .features {
   text-align: center;
 }
 
-/* line 201, ../../scss/main.scss */
+/* line 204, ../../scss/main.scss */
 .feature {
   display: inline-block;
   text-align: center;
   width: 33%;
   margin-top: 40px;
 }
-/* line 207, ../../scss/main.scss */
+/* line 210, ../../scss/main.scss */
 .feature strong {
   margin-bottom: 10px;
 }
 
-/* line 210, ../../scss/main.scss */
+/* line 213, ../../scss/main.scss */
 .feature-bubble {
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
@@ -349,7 +350,7 @@ button:focus {
 /****************************************
 * Misc.
 ****************************************/
-/* line 221, ../../scss/main.scss */
+/* line 224, ../../scss/main.scss */
 #mfPreviewBar, #mfPreviewBarShow {
   display: none !important;
 }
